<resources>
    <string name="app_name">JIN_SADOWSKI</string>
    <string name="student2">Jeffrey Jin (A01026121)</string>
    <string name="student1">Ethan Sadowski (A01089211)</string>
    <string name="age_group_cases">Cases by age group</string>
    <string name="health_authority_cases">Cases by health authority</string>
    <string name="gender_cases">Cases by gender</string>
    <string name="date_cases"><![CDATA[Cases by month & year]]></string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">LOGIN</string>
    <string name="create_new_account">Create new account</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="find">Find</string>
    <string name="date_text">Enter date and click FIND to search for cases.</string>
    <string name="main_title_info">COVID Case Reports \n(2020 – 2021)</string>
    <string name="covid_image">covid_image</string>
    <string-array name="year_array">
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>